--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=Relearning Spring Boot
-spring.h2.console.enabled=true
-spring.datasource.generate-unique-name=false
-spring.datasource.name=runnerz
+spring.sql.init.mode=always
+#spring.h2.console.enabled=true
+#spring.datasource.generate-unique-name=false
+#spring.datasource.name=runnerz
